# o3

./: CMakeLists.txt  README.md
examples/: pathway_generation.cpp  simple_network.cpp
include/: network.h  neuron.h  neuron_gate.h  synapse.h  utils.h
src/: main.cpp  network.cpp  neuron.cpp  neuron_gate.cpp  synapse.cpp  utils.cpp
visualizer/: visualizer.cpp  visualizer.h
